# hw16_c

./: .clang-format  CMakeLists.txt
include/: shader.h
src/: main.c  shader.c
